Actualiza controladores de autenticación, pagos y configuración de seguridad